# BouncyBalls

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Macros.h  main.cpp
src/core/: Core.cpp  Core.h
src/shapes/: Circle.cpp  Circle.h
